package src.creational.abstractfactory;

public interface Card {
    String getCardType();
    String getCardNumber();

}
