package src.creational.abstractfactory;

public interface PaymentMethod {
    String doPayment();
}
